[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.autoflake]
check_diff = true
imports = ["sqlalchemy"]

[tool.poetry]
name = "eugene-inn"
version = "0.1.0"
description = ""
authors = ["EugeneSpiridonov <eugenespint@gmail.com>"]
readme = "README.md"
packages = [{include = "eugene_inn"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.105.0"
uvicorn = {extras = ["standard"], version = "^0.24.0.post1"}
sqlalchemy = "^2.0.23"
alembic = "^1.13.0"
asyncpg = "^0.29.0"
pydantic = {extras = ["email"], version = "^2.5.2"}
pydantic-settings = "^2.1.0"
passlib = "^1.7.4"
python-jose = "^3.3.0"
bcrypt = "^4.1.1"
jinja2 = "^3.1.2"
python-multipart = "^0.0.6"
fastapi-cache2 = {extras = ["redis"], version = "^0.2.1"}
celery = "^5.3.6"
flower = "^2.0.1"
pillow = "^10.1.0"
sqladmin = {extras = ["full"], version = "^0.16.0"}
itsdangerous = "^2.1.2"
pytest = "^7.4.3"
httpx = "^0.26.0"
pytest-asyncio = "^0.23.3"
email-validator = "^2.1.0.post1"
black = "^23.12.1"
flake8 = "^6.1.0"
autoflake = "^2.2.1"
isort = "^5.13.2"
pyright = "^1.1.344"
python-json-logger = "^2.0.7"
sentry-sdk = {extras = ["fastapi"], version = "^1.39.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
